--- a/public/crear_postulacion.html
+++ b/public/crear_postulacion.html
@@ -43,6 +43,8 @@
 
   <div id="footer"></div>
 
+  <script src="config.js"></script>
+
   <script>
     // Carga de navbar y footer
     async function loadComponent(id, file) {
@@ -60,8 +62,8 @@
 
       try {
         const [trabajosRes, usuariosRes] = await Promise.all([
-          fetch("http://localhost:3000/trabajos/select"),
-          fetch("http://localhost:3000/usuarios/select")
+          fetch(`${API_URL}/trabajos/select`),
+          fetch(`${API_URL}/usuarios/select`)
         ]);
 
         const trabajos = await trabajosRes.json();
@@ -97,7 +99,7 @@
         return alert("⚠️ Debes seleccionar un trabajo y un usuario.");
       }
 
-      const res = await fetch("http://localhost:3000/postulaciones", {
+      const res = await fetch(`${API_URL}/postulaciones`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ trabajo_id, usuario_id, mensaje, oferta_pago })
