--- a/public/crear_trabajo.html
+++ b/public/crear_trabajo.html
@@ -26,6 +26,8 @@
 
   <div id="footer"></div>
 
+  <script src="config.js"></script>
+
   <script>
     async function loadComponent(id, file) {
       try {
@@ -54,7 +56,7 @@
       mensaje.textContent = "";
 
       try {
-        const res = await fetch("http://localhost:3000/trabajos", {
+        const res = await fetch(`${API_URL}/trabajos`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(data),
