--- a/public/crear_usuario.html
+++ b/public/crear_usuario.html
@@ -29,6 +29,8 @@
 
   <div id="footer"></div>
 
+  <script src="config.js"></script>
+
   <script>
     async function loadComponent(id, file) {
       try {
@@ -57,7 +59,7 @@
       mensaje.textContent = "";
 
       try {
-        const res = await fetch("http://localhost:3000/usuarios", {
+        const res = await fetch(`${API_URL}/usuarios`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(data),
