--- a/front/usuarios.html
+++ b/front/usuarios.html
@@ -60,8 +60,8 @@
               📧 ${u.email}
             </div>
             <div style="margin-top: 10px;">
-              <button onclick="editarUsuario(${u.id}, '${u.nombre}', '${u.email}', '${u.rol}')">✏️ Editar</button>
-              <button onclick="eliminarUsuario(${u.id})" style="background:#ff4d4f;">🗑 Eliminar</button>
+              <button onclick="editarUsuario(${u.id_usuario}, '${u.nombre}', '${u.email}', '${u.rol}')">✏️ Editar</button>
+              <button onclick="eliminarUsuario(${u.id_usuario})" style="background:#ff4d4f;">🗑 Eliminar</button>
             </div>
           </li>
         `).join("");
